plugins {
    id 'com.diffplug.spotless' version '6.25.0' apply false
    id 'org.jreleaser' version '1.21.0' apply false
}

ext {
    jacksonVersion = '2.17.1'
    bouncyCastleVersion = '1.70'
    slf4jVersion = '2.0.13'
}

allprojects {
    group = 'sh.brane'
    version = '0.3.0'

    repositories {
        mavenCentral()
        maven { url = "https://repo1.maven.org/maven2" }
        maven { url = "https://maven-central.storage-download.googleapis.com/maven2/" }
    }
}

// Module descriptions for POM metadata
ext.moduleDescriptions = [
    'brane-primitives': 'Low-level hex encoding and RLP utilities with zero dependencies',
    'brane-core'      : 'Core types, ABI encoding/decoding, cryptographic primitives, and transaction builders',
    'brane-kzg'       : 'KZG commitment scheme for EIP-4844 blob transactions',
    'brane-rpc'       : 'JSON-RPC client with HTTP and WebSocket transports for Ethereum nodes',
    'brane-contract'  : 'Type-safe contract binding via dynamic proxies, no code generation required',
]

subprojects {
    apply plugin: 'java-library'
    apply plugin: 'com.diffplug.spotless'

    // Set module description from ext.moduleDescriptions if available
    if (rootProject.ext.moduleDescriptions.containsKey(project.name)) {
        project.description = rootProject.ext.moduleDescriptions[project.name]
    }

    spotless {
        java {
            target 'src/**/*.java'
            removeUnusedImports()
            importOrder('java', 'javax', '', 'sh.brane')
            trimTrailingWhitespace()
            endWithNewline()
        }
    }

    java {
        toolchain {
            languageVersion = JavaLanguageVersion.of(21)
        }
    }

    tasks.withType(JavaCompile).configureEach {
        options.encoding = 'UTF-8'
    }

    tasks.withType(Test).configureEach {
        useJUnitPlatform()
        // Forward all brane.* system properties to tests
        systemProperties System.getProperties().findAll { it.key.toString().startsWith("brane.") }

        if (project.hasProperty("brane.integration.tests")) {
            filter {
                includeTestsMatching "*IntegrationTest"
                includeTestsMatching "*AnvilTest"
                setFailOnNoMatchingTests(false)
            }
        }

        if (project.hasProperty("brane.unit.tests")) {
            filter {
                excludeTestsMatching "*IntegrationTest"
                excludeTestsMatching "*AnvilTest"
            }
        }
    }

    dependencies {
        testImplementation 'org.junit.jupiter:junit-jupiter:5.10.2'
        testImplementation 'org.mockito:mockito-core:5.11.0'
        testImplementation 'org.mockito:mockito-junit-jupiter:5.11.0'
        testRuntimeOnly 'org.junit.platform:junit-platform-launcher'
    }

    tasks.withType(Javadoc).configureEach {
        exclude 'sh/brane/internal/**'
        options.addStringOption('Xdoclint:none', '-quiet')
    }
}

// Aggregated Javadoc (Configuration Cache compatible)
tasks.register('allJavadoc', Javadoc) {
    description = 'Generates aggregated Javadoc for all modules'
    group = 'documentation'

    destinationDir = layout.buildDirectory.dir("docs/javadoc").get().asFile
    title = "Brane SDK ${version} API"

    // Resolve everything at configuration time - no Project references stored
    def docProjectNames = subprojects
        .findAll { !['brane-examples', 'brane-benchmark', 'brane-smoke'].contains(it.name) }
        .collect { it.name }

    // Collect source directories eagerly
    def sourceDirs = subprojects
        .findAll { !['brane-examples', 'brane-benchmark', 'brane-smoke'].contains(it.name) }
        .collect { it.sourceSets.main.allJava }

    // Collect classpath eagerly
    def classpathFiles = files(subprojects
        .findAll { !['brane-examples', 'brane-benchmark', 'brane-smoke'].contains(it.name) }
        .collect { it.sourceSets.main.compileClasspath })

    // Use string-based task paths for dependencies
    docProjectNames.each { name ->
        dependsOn ":${name}:compileJava"
    }

    source sourceDirs
    classpath = classpathFiles

    exclude 'sh/brane/internal/**'
    options.addStringOption('Xdoclint:none', '-quiet')
    options.overview = file('src/javadoc/overview.html')
    options.memberLevel = JavadocMemberLevel.PROTECTED
    options.links 'https://docs.oracle.com/en/java/javase/21/docs/api/'
}

// Module dependency graph visualization
task dependencyReport {
    description = 'Displays the module dependency graph for impact analysis'
    group = 'help'

    doLast {
        println ""
        println "═══════════════════════════════════════════════════════════════"
        println "                  Brane SDK Module Dependencies                 "
        println "═══════════════════════════════════════════════════════════════"
        println ""
        println "Module Dependency Graph:"
        println ""
        println "  brane-primitives (0 deps - foundation)"
        println "         │"
        println "         ▼"
        println "     brane-core (primitives + BouncyCastle, Jackson)"
        println "         │"
        println "         ▼"
        println "      brane-rpc (core + Netty, Disruptor)"
        println "         │"
        println "         ▼"
        println "    brane-contract (rpc, core)"
        println "         │"
        println "         ▼"
        println "  ┌──────┴──────┬───────────────┐"
        println "  │             │               │"
        println "examples    benchmark      brane-smoke"
        println ""
        println "═══════════════════════════════════════════════════════════════"
        println ""
        println "Detailed Inter-Module Dependencies:"
        println ""

        // SDK modules in dependency order
        def sdkModules = ['brane-primitives', 'brane-core', 'brane-rpc', 'brane-contract']

        subprojects { p ->
            def apiDeps = []
            def implDeps = []

            // Collect API dependencies
            def apiConfig = p.configurations.findByName('api')
            if (apiConfig) {
                apiConfig.dependencies.each { dep ->
                    if (dep instanceof org.gradle.api.artifacts.ProjectDependency) {
                        apiDeps.add(dep.name)
                    }
                }
            }

            // Collect implementation dependencies (project only)
            def implConfig = p.configurations.findByName('implementation')
            if (implConfig) {
                implConfig.dependencies.each { dep ->
                    if (dep instanceof org.gradle.api.artifacts.ProjectDependency) {
                        implDeps.add(dep.name)
                    }
                }
            }

            if (!apiDeps.isEmpty() || !implDeps.isEmpty()) {
                println "  ${p.name}:"
                if (!apiDeps.isEmpty()) {
                    println "    api: ${apiDeps.join(', ')}"
                }
                if (!implDeps.isEmpty()) {
                    println "    impl: ${implDeps.join(', ')}"
                }
                println ""
            }
        }

        println "═══════════════════════════════════════════════════════════════"
        println ""
        println "Impact Analysis Rules:"
        println ""
        println "  Change in...          │ Affects..."
        println "  ──────────────────────┼────────────────────────────────────"
        println "  brane-primitives      │ ALL modules (foundation)"
        println "  brane-core            │ rpc, contract, examples, benchmark, smoke"
        println "  brane-rpc             │ contract, examples, benchmark, smoke"
        println "  brane-contract        │ examples, benchmark, smoke"
        println "  examples/benchmark    │ None (consumer modules)"
        println ""
        println "═══════════════════════════════════════════════════════════════"
        println ""
        println "Test Commands:"
        println ""
        println "  Quick (single module):  ./gradlew :MODULE:test"
        println "  All SDK tests:          ./gradlew test"
        println "  Impact analysis:        ./scripts/verify_change.sh [class]"
        println "  Full verification:      ./verify_all.sh"
        println ""
    }
}

// List all tests in the project
task listTests {
    description = 'Lists all test files across modules'
    group = 'help'

    doLast {
        println ""
        println "═══════════════════════════════════════════════════════════════"
        println "                    Brane SDK Test Inventory                    "
        println "═══════════════════════════════════════════════════════════════"
        println ""

        def sdkModules = ['brane-primitives', 'brane-core', 'brane-rpc', 'brane-contract']

        sdkModules.each { moduleName ->
            def module = project(":${moduleName}")
            def testDir = module.file("src/test/java")

            if (testDir.exists()) {
                def unitTests = []
                def integrationTests = []

                testDir.eachFileRecurse { file ->
                    if (file.name.endsWith('Test.java')) {
                        if (file.name.contains('Integration') || file.name.contains('Anvil')) {
                            integrationTests.add(file.name)
                        } else {
                            unitTests.add(file.name)
                        }
                    }
                }

                println "  ${moduleName}:"
                println "    Unit tests: ${unitTests.size()}"
                unitTests.each { println "      - ${it}" }
                if (!integrationTests.isEmpty()) {
                    println "    Integration tests: ${integrationTests.size()}"
                    integrationTests.each { println "      - ${it}" }
                }
                println ""
            }
        }

        // Examples
        def examplesDir = project(':brane-examples').file("src/main/java")
        if (examplesDir.exists()) {
            def examples = []
            examplesDir.eachFileRecurse { file ->
                if (file.name.endsWith('Example.java') || file.name.endsWith('IntegrationTest.java')) {
                    examples.add(file.name)
                }
            }
            println "  brane-examples:"
            println "    Examples/Integration: ${examples.size()}"
            examples.each { println "      - ${it}" }
            println ""
        }

        println "═══════════════════════════════════════════════════════════════"
    }
}
